# multiclient-python-streaming

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: client.py  server.py
