[tool.poetry]
name = "multiclient-python-streaming"
version = "0.1.0"
description = "Video streaming with python - Multiple clients"
authors = ["Mario <mariohdpz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imagezmq = "^1.1.1"
imutils = "^0.5.3"
numpy = "^1.19.2"
opencv-python = "^4.4.0"
sshtunnel = "^0.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
